--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800&display=swap" rel="stylesheet">
     <link rel="icon" type="image/svg+xml" href="/vite.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>DeuFome</title>
+    <title>NaMão</title>
   </head>
   <body>
     <div id="root"></div>
